# ai-capacity-optimizer

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: connector-request.yml  feedback.yml  upstream-pr-candidate.yml
.github/workflows/: ci.yml
aco/: GOALS.md  __init__.py  api_server.py  main.py
aco/backend/: __init__.py  accounting.py  api_gateway.py  mock_data.py  openai_compatible.py  optimizer.py  predictor.py  quota_model.py  relay_hub.py  scheduler.py  usage_tracker.py
aco/connectors/: __init__.py  litellm.py
aco/data/: provider_pool.json  quota_config.json  relay_requests.json  usage_log.json
aco/engine/: __init__.py  forecast_engine.py  idle_detection.py  value_estimator.py
aco/frontend/: __init__.py  dashboard.py
aco/skills/: __init__.py  contracts.py  registry.py  runtime.py
docs/: alternatives.md  api.md  architecture.md  feedback.md  gateway-integration-roadmap.md  skills.md  upstream-pr-strategy.md
docs/upstream/: litellm-phase-0-discovery.md
examples/: chat_completion.sh  chat_completion_debug.sh  litellm_budget.json  litellm_dashboard_daily_with_models_export.json  litellm_spend_logs.json
skills/route_cheap/: handler.py  skill.json
skills/route_fill_idle/: handler.py  skill.json
tests/: __init__.py  test_forecast_engine.py  test_litellm_connector.py
